--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,7 @@
 
 .Wrapper {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(39, 38, 38);
 }
