--- a/src/components/list.module.css
+++ b/src/components/list.module.css
@@ -1,2 +1,37 @@
-.wrapper {
+.listWrapper {
+  display: flex;
+  align-items: center;
+  background-color: rgb(218, 218, 218);
+  width: 60%;
+  flex-wrap: wrap;
+}
+
+.listItemWrapper {
+  cursor: pointer;
+  display: flex;
+  padding: 20px;
+  width: 48%;
+  height: 200px;
+  /* padding:20px; */
+  margin: 10px;
+  background-color: wheat;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.listItemWrapper:hover {
+  transform: scale(1.1);
+  box-shadow: none;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.textBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
 }
