+ 검색 api 연동 + 메인 페이지에 검색한 결과들 렌더링 + UX 향상(엔터 눌렀을 때 검색가능하게하기, 검색시 검색어 지워주기)

--- a/src/components/list.module.css
+++ b/src/components/list.module.css
@@ -12,9 +12,8 @@
   padding: 20px;
   width: 48%;
   height: 200px;
-  /* padding:20px; */
   margin: 10px;
-  background-color: wheat;
+  background-color: rgb(56, 133, 69);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
