--- a/src/components/detail.module.css
+++ b/src/components/detail.module.css
@@ -1,6 +1,37 @@
 .wrapper {
   display: flex;
+  flex-direction: row;
+  background-color: rgb(39, 38, 38);
+  width: 100%;
+}
+.contentBox {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(39, 38, 38);
+  background-color: white;
+  flex: 3;
+}
+
+.descriptionBox {
+  width: 100%;
+}
+
+.list {
+  flex: 1;
+  background-color: white;
+}
+
+.iframe {
+  width: 100%;
+  height: 500px;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0px;
+}
+.channelTitle {
+  font-size: 1.5rem;
+  margin: 20px 0px;
 }
