--- a/src/components/list.module.css
+++ b/src/components/list.module.css
@@ -1,8 +1,7 @@
 .listWrapper {
   display: flex;
   align-items: center;
-  background-color: rgb(218, 218, 218);
-  width: 60%;
+
   flex-wrap: wrap;
 }
 
@@ -33,4 +32,25 @@
   flex-direction: column;
   justify-content: center;
   padding: 10px;
+}
+
+.detailListItemWrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  cursor: pointer;
+  width: 100%;
+  border: 1px solid gray;
+}
+.detailTextBox {
+  font-size: 1rem;
+}
+
+.thumnail {
+  width: 120px;
+  height: 113px;
+}
+
+.detailTitle {
+  font-weight: bold;
 }
