--- a/src/components/main.module.css
+++ b/src/components/main.module.css
@@ -3,8 +3,6 @@
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(39, 38, 38);
+  width: 70%;
+  margin: 0px auto;
 }
