+ 렌더링 최적화

--- a/src/components/list.module.css
+++ b/src/components/list.module.css
@@ -12,7 +12,7 @@
   width: 48%;
   height: 200px;
   margin: 10px;
-  background-color: rgb(56, 133, 69);
+  background-color: #434641;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
@@ -37,7 +37,6 @@
 .detailListItemWrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
   cursor: pointer;
   width: 100%;
   border: 1px solid gray;
