--- a/src/components/detail/detail.module.css
+++ b/src/components/detail/detail.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: row;
-  background-color: rgb(39, 38, 38);
+  background-color: white;
   width: 100%;
 }
 .contentBox {
@@ -11,7 +11,8 @@
   background-color: white;
   flex: 3;
   position: sticky;
-  top: 20px;
+  top: 0px;
+  align-self: start;
 }
 
 .descriptionBox {
