--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -1,24 +1,22 @@
 .listWrapper {
   display: flex;
-  align-items: center;
-
   flex-wrap: wrap;
+  padding-left: 0;
+  margin: 0;
 }
 
 .listItemWrapper {
-  cursor: pointer;
+  width: 50%;
+  height: 100%;
   display: flex;
-  padding: 20px;
-  width: 48%;
-  height: 200px;
-  margin: 10px;
-  background-color: #434641;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  align-items: center;
+  border: 1px solid lightgray;
+  box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.53);
+  cursor: pointer;
+  transition: transform 250ms ease-in;
 }
 .listItemWrapper:hover {
-  transform: scale(1.1);
+  transform: scale(1.02);
   box-shadow: none;
 }
 
@@ -43,11 +41,12 @@
 }
 .detailTextBox {
   font-size: 1rem;
+  padding: 1rem 0.2rem;
 }
 
 .thumnail {
-  width: 120px;
-  height: 113px;
+  width: 40%;
+  height: 100%;
 }
 
 .detailTitle {
